--- a/index.html
+++ b/index.html
@@ -10,25 +10,26 @@
     <meta name="description" content="baxicx official home page" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
-    <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
-    <!--Replace with your tailwind.css once created-->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">    <!--Replace with your tailwind.css once created-->
+    <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <style>
       .gradient {
         background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
       }
     </style>
   </head>
-  <body class="leading-normal tracking-normal text-white gradient" style="font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace">
+  <body class="leading-normal tracking-normal text-white gradient" style="font-family:'Comfortaa', cursive,ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace">
     <!--Nav-->
     <nav id="header" class="fixed w-full z-30 top-0 text-white">
       <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
         <div class="pl-4 flex items-center">
-          <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
+          <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl font-family:font-family: 'Comfortaa', cursive;" href="#">
             <!--Icon from: http://www.potlabicons.com/ -->
             <img src="logo.png" alt="logo" class="h-10 inline-block">
-            baxicx
+            basicx
           </a>
         </div>
         <div class="block lg:hidden pr-4">
@@ -619,7 +620,7 @@
       <div class="container mx-auto px-8">
         <div class="w-full flex flex-col md:flex-row py-6">
       
-          <div class="flex-1 mb-6 text-black right">
+          <div class="flex-1 mb-6 text-black">
             <a class="text-pink-600 no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
   
               <img src="logo.png" alt="logo" class="h-10 inline-block">
