--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-      Welcome to baxicx!
+      Welcome to basicx!
     </title>
-    <meta name="description" content="baxicx official home page" />
+    <meta name="description" content="basicx official home page" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
