--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
       }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W4ZHLYZK6P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W4ZHLYZK6P');
+</script>
   </head>
   <body class="leading-normal tracking-normal text-white gradient" style="font-family:'Comfortaa', cursive,ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace">
     <!--Nav-->
