--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="facebook-domain-verification" content="ouwp2jqbysk6k6o0kfc4jjl0sk0om2" />
     <title>
-      Welcome to basicx!
+      Welcome to Binary Tree Labs!
     </title>
-    <meta name="description" content="basicx official home page" />
+    <meta name="description" content="Binary Tree Labs official home page" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
@@ -39,7 +39,7 @@
           <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl font-family:font-family: 'Comfortaa', cursive;" href="#">
             <!--Icon from: http://www.potlabicons.com/ -->
             <img src="logo.png" alt="logo" class="h-10 inline-block">
-            basicx
+            Binary Tree Labs
           </a>
         </div>
         <div class="block lg:hidden pr-4">
@@ -79,7 +79,7 @@
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
           <!-- <p class="uppercase tracking-loose w-full">What business are you?</p> -->
           <h1 class="my-4 text-5xl font-bold leading-tight">
-            Welcome to basicx!
+            Welcome to Binary Tree Labs!
           </h1>
           <!-- <p class="leading-normal text-2xl mb-8">
             Sub-hero message, not too long and not too short. Make it just right!
@@ -635,7 +635,7 @@
   
               <img src="logo.png" alt="logo" class="h-10 inline-block">
 
-              <span class="text-sm">&copy; basicx.io - 2023 </span>
+              <span class="text-sm">&copy; Binary Tree Labs - 2023 </span>
             </a>
           </div>
           <!-- <div class="flex-1">
