--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
           <!-- <p class="uppercase tracking-loose w-full">What business are you?</p> -->
           <h1 class="my-4 text-5xl font-bold leading-tight">
-            Welcome to Binary Tree Labs!
+            Welcome to <br />
+            Binary Tree Labs!
           </h1>
           <!-- <p class="leading-normal text-2xl mb-8">
             Sub-hero message, not too long and not too short. Make it just right!
